--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>Document</title>
     </head>
     <body>
-        
+        <h1>My Work</h1>
+        <p> <a href="https://www.google.com/search?q=harambe&sca_esv=d132125e0eee6de4&biw=1249&bih=1277&udm=2&ei=mh6PZ8D7H9PV1e8PhPyimQs&ved=0ahUKEwjAsOWl-YWLAxXTavUHHQS-KLMQ4dUDCBE&uact=5&oq=harambe&gs_lp=EgNpbWciB2hhcmFtYmUyCBAAGIAEGLEDMgUQABiABDIFEAAYgAQyBRAAGIAEMgUQABiABDIFEAAYgAQyBRAAGIAEMgUQABiABDIFEAAYgAQyCBAAGIAEGMcDSM0eUJ0HWJ0ccAJ4AJABAJgBggGgAbwEqgEDNy4xuAEDyAEA-AEBmAIKoALRBMICChAAGIAEGEMYigXCAgQQABgewgIGEAAYCBgewgIOEAAYgAQYsQMYgwEYigXCAgsQABiABBixAxiDAcICBBAAGAPCAg0QABiABBixAxhDGIoFmAMAiAYBkgcDOS4xoAePJg&sclient=img"> harambe images </a> </p>
+        <a href="https://www.google.com/"<img src="google_logo."> </a>
+        <p><a href="otherhtml.html">Next Page</a></p>
     </body>
 </html>
